# ray_tracing

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  README.md  main.c
geometry/: CMakeLists.txt  render.c  render.h  vector.c  vector.h
thread_pool/: CMakeLists.txt
thread_pool/include/: thread_pool.h  types.h
thread_pool/src/: thread_pool.c
